--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,44 @@
-name: HW - Hello World
+name: Deploy to Server
+
 on:
   push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+    branches: [ main ]
+
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
-      steps:
-        - run: echo "Hello World"
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Build JAR
+        run: |
+          mvn clean package
+          cp target/*.jar app.jar
+
+      - name: Upload JAR to server
+        uses: easingthemes/ssh-deploy@main
+        with:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          ARGS: "-rltgoDzvO --delete"
+          SOURCE: "app.jar"
+          REMOTE_HOST: ${{ secrets.SERVER_HOST }}
+          REMOTE_USER: ${{ secrets.SERVER_USER }}
+          TARGET: "/opt/java-app/"
+
+      - name: Start application on server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            cd /opt/java-app
+            # Останавливаем старый процесс
+            if [ -f app.pid ]; then
+              kill $(cat app.pid) 2>/dev/null || true
+            fi
+            # Запускаем новый
+            nohup java -jar app.jar > app.log 2>&1 &
+            echo $! > app.pid
+            echo "Application restarted!"
