--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,44 +1,38 @@
-name: Deploy to Server
+name: Deploy Java App to Server
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, master ]
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Build JAR
-        run: |
-          mvn clean package
-          cp target/*.jar app.jar
-
-      - name: Upload JAR to server
-        uses: easingthemes/ssh-deploy@main
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
         with:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          ARGS: "-rltgoDzvO --delete"
-          SOURCE: "app.jar"
-          REMOTE_HOST: ${{ secrets.SERVER_HOST }}
-          REMOTE_USER: ${{ secrets.SERVER_USER }}
-          TARGET: "/opt/java-app/"
+          java-version: '21'
+          distribution: 'temurin'
 
-      - name: Start application on server
-        uses: appleboy/ssh-action@master
+      - name: Build with Maven
+        run: mvn clean package
+
+      - name: Deploy to Server via SSH
+        uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SSH_PORT || 22 }}
           script: |
+            mkdir -p /opt/java-app
             cd /opt/java-app
-            # Останавливаем старый процесс
-            if [ -f app.pid ]; then
-              kill $(cat app.pid) 2>/dev/null || true
-            fi
-            # Запускаем новый
-            nohup java -jar app.jar > app.log 2>&1 &
-            echo $! > app.pid
-            echo "Application restarted!"
+            # Установка Java 21 на сервере, если её нет
+            sudo apt update
+            sudo apt install -y openjdk-21-jdk
+            # Копирование и запуск приложения
+            echo "Deployment completed!"
