--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,38 +1,37 @@
-name: Deploy Java App to Server
+name: Deploy Simple Java App
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [ main ]
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          java-version: '21'
-          distribution: 'temurin'
+      - name: Compile Java
+        run: |
+          mkdir -p target
+          javac -d target src/main/java/org/example/Main.java
+          # Создаём JAR
+          cd target
+          jar cfe app.jar org.example.Main org/example/Main.class
 
-      - name: Build with Maven
-        run: mvn clean package
-
-      - name: Deploy to Server via SSH
+      - name: Deploy to server
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: ${{ secrets.SSH_PORT || 22 }}
           script: |
-            mkdir -p /opt/java-app
             cd /opt/java-app
-            # Установка Java 21 на сервере, если её нет
+            # Установка Java (версия по умолчанию)
             sudo apt update
-            sudo apt install -y openjdk-21-jdk
-            # Копирование и запуск приложения
-            echo "Deployment completed!"
+            sudo apt install -y default-jdk
+            
+            # Запуск приложения
+            java -jar app.jar &
+            echo "Application started!"
