--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Deploy with Docker
+name: Deploy Java App
 
 on:
   push:
@@ -22,22 +22,40 @@ jobs:
         run: mvn clean package
 
       - name: Build Docker image
-        run: docker build -t java-app .
+        run: |
+          docker build -t java-app .
+          docker save java-app -o java-app.tar
 
-      - name: Deploy to Server
+      - name: Copy files to server
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SSH_PORT || 22 }}
+          source: "java-app.tar"
+          target: "/tmp/"
+
+      - name: Deploy on server
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SSH_PORT || 22 }}
           script: |
-            # Останавливаем старый контейнер
-            docker stop java-app-container || true
-            docker rm java-app-container || true
+            # Установка Docker если нет
+            if ! command -v docker &> /dev/null; then
+              echo "Installing Docker..."
+              sudo apt update
+              sudo apt install -y docker.io
+              sudo systemctl start docker
+              sudo systemctl enable docker
+            fi
             
-            # Запускаем новый
-            docker run -d \
-              --name java-app-container \
-              -p 8080:8080 \
-              --restart always \
-              java-app
+            # Загрузка и запуск образа
+            docker load -i /tmp/java-app.tar
+            docker stop java-app || true
+            docker rm java-app || true
+            docker run -d --name java-app -p 8080:8080 --restart always java-app
+            echo "Application deployed!"
